8149184: os::is_server_class_machine() could return incorrect result if a host's cpu have a few logical cores

Reviewed-by: dsamersoff, dholmes